2003-04-29  John Levon  <levon@movementarian.org>

	* libutil++/op_bfd.cpp: remove "static " inside anon namespace

2003-04-28  Philippe Elie  <phil.el@wanadoo.fr>

	* libpp/format_output.h:
	* libpp/format_output.cpp: need header tweaking

	* pp/opannotate.cpp:
	* pp/opgprof.cpp: minor tidy

	* pp/opreport_options.h:
	* pp/opreport_options.cpp:
	* pp/opreport.cpp: handle -no-header and --image-path

2003-04-28  Philippe Elie  <phil.el@wanadoo.fr>

	* libutil++/glob_filter.cpp:
	* libutil++/path_filter.cpp:
	* libutil++/string_filter.cpp: #include <algorithm>

2003-04-28  John Levon  <levon@movementarian.org>

	* libutil++/string_filter.cpp:
	* libutil++/string_filter.h:
	* libutil++/glob_filter.h:
	* libutil++/glob_filter.cpp:
	* libutil++/path_filter.h:
	* libutil++/path_filter.cpp: use std::find[_if],
	share some code

2003-04-28  Philippe Elie  <phil.el@wanadoo.fr>

	* libutil++/op_bfd.cpp: replace a loop by a std::copy()

2003-04-28  John Levon  <levon@movementarian.org>

	* libutil++/op_bfd.h:
	* libutil++/op_bfd.cpp: cleanup of last fix

2003-04-28  John Levon  <levon@movementarian.org>

	* libutil++/op_bfd.h:
	* libutil++/op_bfd.cpp: make symbol filtering
	happen *after* adding of artificial symbol

2003-04-28  John Levon  <levon@movementarian.org>

	* libutil++/string_filter.cpp:
	* libutil++/glob_filter.cpp:
	* libutil++/path_filter.cpp: match as true if
	include_list is empty and not excluded

	* libutil++/op_bfd.h:
	* libutil++/op_bfd.cpp: use string_filter to
	filter symbols

	* libpp/profile_container.h:
	* libpp/profile_container.cpp:
	* pp/opreport_options.h:
	* pp/opreport_options.cpp:
	* pp/opreport.cpp: changes from using string_filter

2003-04-28  Philippe Elie  <phil.el@wanadoo.fr>

	* pp/opreport.cpp: finish to remove use of split_sample_filename

2003-04-28  John Levon  <levon@movementarian.org>

	* libutil++/filename_match.h:
	* libutil++/filename_match.cpp: replace with ...

	* libutil++/Makefile.am:
	* libutil++/string_filter.h: