@@ -47,7 +47,7 @@ odb_open() unable to resize file /var/lib/oprofile/samples/current/{root}/bin/ca
  <movement> [moz@lambent oprofile-pp]$ pp/opreport --merge=lib -n | more
 <movement>    194561  40.1204 /boot/2.5.66/vmlinux
 <movement>     62102  12.8060 /boot/2.5.66/vmlinux
-<phe> ok I see, the first is the merged vmlinux from all application the second in the default vmlinux (where we put samples when we have no ownong application)
+<phe> ok I see, the first is the merged vmlinux from all application the second in the default vmlinux (where we put samples when we have no owning application)
 
  o fix John movement on 2.5: odb_insert failure (and message error corrupted ?)
 
