@@ -1,3 +1,9 @@
+2003-04-29  Philippe Elie  <phil.el@wanadoo.fr>
+
+	* libpp/parse_cmdline.h:
+	* libpp/parse_cmdline.cpp: handle opreport /lib/libc-2.2.5.so, now
+	  non tag, non option argument match either an image name or lib name
+
 2003-04-29  John Levon  <levon@movementarian.org>
 
 	* libutil++/op_bfd.cpp: remove "static " inside anon namespace
